--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-flash": "^0.0.2",
