--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1",
     "tiny-csrf": "^1.1.4"
   },
   "devDependencies": {
